force-app/main/default/objects/ABHFL_Ebot_Case_Email__mdt/ABHFL_Ebot_Case_Email__mdt.object-meta.xml
<CustomObject>
    <label>ABHFL EBOT Case Email</label>
    <pluralLabel>ABHFL EBOT Case Email</pluralLabel>
</CustomObject>