force-app/main/default/objects/ABHFL_Ebot_Case_Email__mdt/fields/ISATTACHMENT__c.field-meta.xml
<CustomField>
    <fullName>ISATTACHMENT__c</fullName>
    <label>ISATTACHMENT</label>
    <length>3</length>
    <type>Text</type>
</CustomField>