force-app/main/default/objects/ABHFL_Ebot_Case_Email__mdt/fields/ISREGISTRED__c.field-meta.xml
<CustomField>
    <fullName>ISREGISTRED__c</fullName>
    <label>ISREGISTRED</label>
    <length>3</length>
    <type>Text</type>
</CustomField>