force-app/main/default/objects/ABHFL_Ebot_Case_Email__mdt/fields/ISREGULATOR__c.field-meta.xml
<CustomField>
    <fullName>ISREGULATOR__c</fullName>
    <label>ISREGULATOR</label>
    <length>3</length>
    <type>Text</type>
</CustomField>