force-app/main/default/objects/ABHFL_Ebot_Case_Email__mdt/fields/ISREPEAT__c.field-meta.xml
<CustomField>
    <fullName>ISREPEAT__c</fullName>
    <label>ISREPEAT</label>
    <length>3</length>
    <type>Text</type>
</CustomField>