force-app/main/default/objects/ABHFL_Ebot_Case_Email__mdt/fields/ISSMT__c.field-meta.xml
<CustomField>
    <fullName>ISSMT__c</fullName>
    <label>ISSMT</label>
    <length>3</length>
    <type>Text</type>
</CustomField>